--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@ title: Paweł Majewski - Blog
 
   <blockquote>
     <p>
-      Perfection is not when there’s nothing to add, but when there’s
-      nothing to take away.
+      Nie wystarczy dużo wiedzieć, ażeby być mądrym.
     </p>
-    <p class="author">- Antoine de Saint-Exupéry</p>
+    <p class="author">- Heraklitz Efezu</p>
   </blockquote>
   
   <h1>Posty</h1>
